--- a/contactInfo.html
+++ b/contactInfo.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Tom's Contact Info</title>
+    <link rel="stylesheet" href="css/sytles.css">
   </head>
   <body>
     <h1><strong>Tom's Contact Information</strong></h1>
+    <hr>
     <h3>Email</h3>
 <ul>
   <li><em>tommyfenyak@gmail.com</em></li>
@@ -14,7 +16,7 @@
     <ul>
       <li><em>703-477-6271</em></li>
     </ul>
-    <p>Tom's Personal <a href="https://www.linkedin.com/in/thomasfenyak/">LinkedIn</a> page.</p>
+    <p>Tom's Personal <a class="links" href="https://www.linkedin.com/in/thomasfenyak/">LinkedIn</a> page.</p>
 <hr>
   <form action="mailto:tommyfenyak@gmail.com?subject=feedback" method="post" enctype="text/plain">
     <label>Your Name:</label>
