--- a/hobbies.html
+++ b/hobbies.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Tom's Hobbies</title>
+    <link rel="stylesheet" href="css/sytles.css">
   </head>
   <body>
     <h1>My Hobbies</h1>
     <img
       src="images/hiking1.jpg" alt="First 4000 Footer" height="300" width="250">
+      <hr>
     <ul>
       <li>Golf</li>
-      <li><a href="https://www.instagram.com/tomyak22/">Hiking</a></li>
+      <li><a class="links" href="https://www.instagram.com/tomyak22/">Hiking</a></li>
       <li>Craft beer tasting</li>
       <li>Traveling</li>
     </ul>
