--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>Tom's Personal Site</title>
+  <link rel="stylesheet" href="css/sytles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/headshot.jpg" alt="Tom Fenyak Headshot"></td>
+      <td><img class="circular" src="images/headshot.jpg" alt="Tom Fenyak Headshot"></td>
       <td>
         <h1>Tom Fenyak</h1>
-        <p><em><a href="https://csonline.eng.auburn.edu/">Online Computer Science</a> Student at Auburn University.</em></p>
+        <p><em><a class="links" href="https://csonline.eng.auburn.edu/">Online Computer Science</a> Student at Auburn University.</em></p>
         <p>Motivated and passionate young developer undergoing a career pivot.
           Began as a self-taught venture and after networking and consulting with
           industry leaders, made the leap into Auburn University’s Online Computer
@@ -53,53 +54,53 @@
   <hr>
   <!--Table for job experience -->
   <h3>Work Experience</h3>
-<table cellspacing="10">
-  <thead>
-    <tr>
-      <th>Dates</th>
-      <th>Work</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>2014-Current</td>
-      <td>Senior Inside Sales Rep at Corptax</td>
-    </tr>
-    <tr>
-      <td>2016</td>
-      <td>Emergency Room Registrar at Greenbrier Valley Medical Center</td>
-    </tr>
-  </tbody>
-</table>
-<hr>
-<h3>Skills</h3>
+  <table cellspacing="10">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2014-Current</td>
+        <td>Senior Inside Sales Rep at Corptax</td>
+      </tr>
+      <tr>
+        <td>2016</td>
+        <td>Emergency Room Registrar at Greenbrier Valley Medical Center</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <h3>Skills</h3>
   <table cellspacing="10">
     <tr>
       <td>Microsoft Office</td>
-      <td>🔶🔶🔶🔶🔶</td>
+      <td>🔥🔥🔥🔥🔥</td>
     </tr>
     <tr>
       <td>Web Development</td>
-      <td>🔶🔶🔶</td>
+      <td>🔥🔥🔥</td>
     </tr>
     <tr>
       <td>Java Programming</td>
-      <td>🔶🔶🔶</td>
+      <td>🔥🔥🔥</td>
     </tr>
     <tr>
       <td>iOS Development</td>
-      <td>🔶🔶</td>
+      <td>🔥🔥</td>
     </tr>
     <tr>
       <td>SQL</td>
-      <td>🔶</td>
+      <td>🔥</td>
     </tr>
   </table>
   <hr>
   <!--Links to hobbie and contact info -->
-  <a href="hobbies.html">What I do in my free time!</a>
+  <a class="links" href="hobbies.html">What I do in my free time!</a>
   <br>
-  <a href="contactInfo.html">Contact Tom!</a>
+  <a class="links" href="contactInfo.html">Contact Tom!</a>
 </body>
 
 </html>
